updated api to have private routes
